--- a/package.json
+++ b/package.json
@@ -15,11 +15,38 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.3.0",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "get-image-colors": "^1.8.1",
+    "image-downloader": "^3.4.1",
+    "imagemin": "^6.0.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "5.0.1",
+    "lodash": "^4.17.10",
+    "lua.vm.js": "0.0.1",
+    "node-cmd": "^3.0.0",
+    "node-progress": "^0.1.0",
+    "requestretry": "^2.0.2",
+    "semantic-release": "^15.6.2",
+    "sharp": "^0.20.5",
+    "warframe-patchlogs": "^1.40.0"
   },
   "dependencies": {
     "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.1.1",
     "knex": "^0.15.2",
+    "lodash": "^4.17.10",
     "pg": "^7.4.3"
   }
 }
