--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.3",
-    "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "colors": "^1.3.0",
     "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-node": "^7.0.0",
     "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
     "get-image-colors": "^1.8.1",
     "image-downloader": "^3.4.1",
@@ -33,8 +34,10 @@
     "imagemin-pngquant": "5.0.1",
     "lodash": "^4.17.10",
     "lua.vm.js": "0.0.1",
+    "mocha": "^5.2.0",
     "node-cmd": "^3.0.0",
     "node-progress": "^0.1.0",
+    "nodemon": "^1.18.3",
     "requestretry": "^2.0.2",
     "semantic-release": "^15.6.2",
     "sharp": "^0.20.5",
