--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
-    "import": "babel-node lib/warframe-items/build/import.js"
+    "import": "babel-node src/import.js"
   },
   "keywords": [],
   "author": "",
