--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "warframe-patchlogs": "^1.40.0"
   },
   "dependencies": {
+    "cheerio-tableparser": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
