--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
-    "import": "babel-node src/import.js"
+    "import": "babel-node src/import.js",
+    "refresh": "node lib/warframe-items/build/update.js"
   },
   "keywords": [],
   "author": "",
