--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
-    "cheerio": "^1.0.0-rc.2",
-    "colors": "^1.3.0",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^11.0.0",
@@ -29,30 +26,31 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
     "get-image-colors": "^1.8.1",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "cheerio-tableparser": "^1.0.1",
+    "colors": "^1.3.0",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "fs-extra": "^7.0.0",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.1.1",
     "image-downloader": "^3.4.1",
     "imagemin": "^6.0.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "5.0.1",
-    "lodash": "^4.17.10",
-    "lua.vm.js": "0.0.1",
-    "mocha": "^5.2.0",
-    "node-cmd": "^3.0.0",
-    "node-progress": "^0.1.0",
-    "nodemon": "^1.18.3",
-    "requestretry": "^2.0.2",
-    "semantic-release": "^15.6.2",
-    "sharp": "^0.20.5",
-    "warframe-patchlogs": "^1.40.0"
-  },
-  "dependencies": {
-    "cheerio-tableparser": "^1.0.1",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2",
-    "graphql-tools": "^3.1.1",
     "knex": "^0.15.2",
     "lodash": "^4.17.10",
-    "pg": "^7.4.3"
+    "node-cmd": "^3.0.0",
+    "node-progress": "^0.1.0",
+    "pg": "^7.4.3",
+    "requestretry": "^2.0.2",
+    "sharp": "^0.20.5",
+    "warframe-patchlogs": "^1.40.0"
   }
 }
