--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "apollo-server": "^2.0.6",
+    "apollo-server-express": "^2.0.5",
+    "app-module-path": "^2.2.0",
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "cheerio-tableparser": "^1.0.1",
     "colors": "^1.3.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
     "fs-extra": "^7.0.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
+    "graphql-type-json": "^0.2.1",
     "image-downloader": "^3.4.1",
     "imagemin": "^6.0.0",
     "imagemin-jpegtran": "^5.0.2",
