add test for mods query

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "rules": {
         "consistent-return": "off",
         "import/no-unresolved": "off"
+    },
+    "env": {
+        "jest": true
     }
 }
