--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
+    "build": "babel lib -d dist",
+    "serve" : "node dist/index.js",
+    "test-server": "NODE_ENV='test' nodemon src/index.js --exec babel-node",
     "import": "babel-node src/import.js",
-    "refresh": "node lib/warframe-items/build/update.js"
+    "refresh": "node lib/warframe-items/build/update.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +30,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
     "get-image-colors": "^1.8.1",
+    "jest": "^23.6.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   },
