--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
     "build": "babel lib -d dist",
-    "serve" : "node dist/index.js",
+    "serve": "node dist/index.js",
     "test-server": "NODE_ENV='test' nodemon src/index.js --exec babel-node",
     "import": "babel-node src/import.js",
     "refresh": "node lib/warframe-items/build/update.js",
@@ -43,6 +43,7 @@
     "cheerio-tableparser": "^1.0.1",
     "colors": "^1.3.0",
     "cors": "^2.8.4",
+    "dataloader": "^1.4.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fs-extra": "^7.0.0",
