--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "colors": "^1.3.2",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.0",
     "graphql": "^0.13.2",
