--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -27,9 +29,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "^1.15.3",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.8"
+    "nodemon": "^1.18.8",
+    "prettier": "^1.15.3"
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
@@ -50,5 +52,9 @@
     "pg": "^7.6.0",
     "postgraphile": "^4.1.0",
     "requestretry": "^2.0.2"
+  },
+  "jest": {
+    "globalSetup": "<rootDir>/test/test_setup.js",
+    "globalTeardown": "<rootDir>/test/test_teardown.js"
   }
 }
